Add dynamic_window_approach images

--- a/teoricas/teorica_09/src/motion_planning.tex
+++ b/teoricas/teorica_09/src/motion_planning.tex
@@ -21,7 +21,7 @@
 	\end{block}
 
 	
-	Objetivos:
+	\textbf{Objetivos:}
 	\begin{itemize}
 		\item Generar trayectorias sin colisiones.
 		\item El robot debe llegar a la ubicación de destino lo más rápido posible.
@@ -67,11 +67,107 @@
 	\frametitle{Dynamic Window Approach}
 	\note{Información extraída de http://ais.informatik.uni-freiburg.de/teaching/ss18/robotics/slides/19-pathplanning-long.pdf}
 	
-	
-	\TODO{Completar con slides: \url{http://ais.informatik.uni-freiburg.de/teaching/ss18/robotics/slides/19-pathplanning-long.pdf}}
-	
-	
+    \begin{itemize}
+        \item Evasión de colisiones: determine trayectorias libres de colisiones mediante operaciones geométricas
+        \item El robot se mueve en arcos circulares
+        \item Comandos de movimiento: $(v,\omega)$
+        \item ¿Cuáles $(v,\omega)$ son admisibles y alcanzables?
+    \end{itemize}    
+    
 \end{frame}
+
+\begin{frame}
+    \frametitle{Velocidades Admisibles}
+    \note{Información extraída de http://ais.informatik.uni-freiburg.de/teaching/ss18/robotics/slides/19-pathplanning-long.pdf}
+    
+    \begin{itemize}
+        \item Las velocidades son admisibles si el robot fuera capaz de detenerse antes de alcanzar el obstáculo
+    \end{itemize}
+    
+    \begin{center}
+        \includegraphics[width=0.6\columnwidth]{images/dynamic_window_approach_admisible_velocities.pdf}
+    \end{center}
+    
+    
+    \TODO{Completar con slides: \url{http://ais.informatik.uni-freiburg.de/teaching/ss18/robotics/slides/19-pathplanning-long.pdf}}
+    
+    
+\end{frame}
+
+\begin{frame}
+    \frametitle{Velocidades Alcanzables}
+    \note{Información extraída de http://ais.informatik.uni-freiburg.de/teaching/ss18/robotics/slides/19-pathplanning-long.pdf}
+    
+    \begin{center}
+        \includegraphics[width=0.7\columnwidth]{images/dynamic_window_approach_recheable_velocities.pdf}
+    \end{center}
+    
+    
+    \TODO{Completar con slides: \url{http://ais.informatik.uni-freiburg.de/teaching/ss18/robotics/slides/19-pathplanning-long.pdf}}
+    
+    
+\end{frame}
+
+\begin{frame}
+    \frametitle{Dynamic Window Approach}
+    \note{Información extraída de http://ais.informatik.uni-freiburg.de/teaching/ss18/robotics/slides/19-pathplanning-long.pdf}
+    
+    
+    \TODO{Completar con slides: \url{http://ais.informatik.uni-freiburg.de/teaching/ss18/robotics/slides/19-pathplanning-long.pdf}}
+    
+    
+\end{frame}
+
+\begin{frame}
+    \frametitle{Dynamic Window Approach}
+    \note{Información extraída de http://ais.informatik.uni-freiburg.de/teaching/ss18/robotics/slides/19-pathplanning-long.pdf}
+    
+    
+    \TODO{Completar con slides: \url{http://ais.informatik.uni-freiburg.de/teaching/ss18/robotics/slides/19-pathplanning-long.pdf}}
+    
+    
+\end{frame}
+
+\begin{frame}
+    \frametitle{Dynamic Window Approach}
+    \note{Información extraída de http://ais.informatik.uni-freiburg.de/teaching/ss18/robotics/slides/19-pathplanning-long.pdf}
+    
+    
+    \TODO{Completar con slides: \url{http://ais.informatik.uni-freiburg.de/teaching/ss18/robotics/slides/19-pathplanning-long.pdf}}
+    
+    
+\end{frame}
+
+\begin{frame}
+    \frametitle{Dynamic Window Approach}
+    \note{Información extraída de http://ais.informatik.uni-freiburg.de/teaching/ss18/robotics/slides/19-pathplanning-long.pdf}
+    
+    
+    \TODO{Completar con slides: \url{http://ais.informatik.uni-freiburg.de/teaching/ss18/robotics/slides/19-pathplanning-long.pdf}}
+    
+    
+\end{frame}
+
+\begin{frame}
+    \frametitle{Dynamic Window Approach}
+    \note{Información extraída de http://ais.informatik.uni-freiburg.de/teaching/ss18/robotics/slides/19-pathplanning-long.pdf}
+    
+    
+    \TODO{Completar con slides: \url{http://ais.informatik.uni-freiburg.de/teaching/ss18/robotics/slides/19-pathplanning-long.pdf}}
+    
+    
+\end{frame}
+
+\begin{frame}
+    \frametitle{Dynamic Window Approach}
+    \note{Información extraída de http://ais.informatik.uni-freiburg.de/teaching/ss18/robotics/slides/19-pathplanning-long.pdf}
+    
+    
+    \TODO{Completar con slides: \url{http://ais.informatik.uni-freiburg.de/teaching/ss18/robotics/slides/19-pathplanning-long.pdf}}
+    
+    
+\end{frame}
+
 
 \begin{frame}
 	\frametitle{Formulación de Motion Planning}
