--- a/common/bibliography.bib
+++ b/common/bibliography.bib
@@ -299,4 +299,17 @@
 	ISBN={9780262255912}
 }
 
+% Robot Motion Planning
+@book{latombe1991robot,
+    author = {Latombe, Jean-Claude},
+    title = {\href{https://doi.org/10.1007/978-1-4615-4022-9}{Robot Motion Planning}},
+    year = {1991},
+    isbn = {0792391292},
+    publisher = {Kluwer Academic Publishers},
+    address = {USA},
+    publisher = springer,
+    doi={10.1007/978-1-4615-4022-9}
+}
+
+
 
