--- a/teoricas/teorica_09/src/motion_planning.tex
+++ b/teoricas/teorica_09/src/motion_planning.tex
@@ -19,7 +19,7 @@
 	\begin{block}{Latombe (1991)}
 		``... eminently necessary since, by definition, a robot accomplishes tasks by moving in the real world.''
 	\end{block}
-
+    \footfullcitenomark{latombe1991robot}
 	
 	\textbf{Objetivos:}
 	\begin{itemize}
@@ -72,7 +72,7 @@
         \item El robot se mueve en arcos circulares
         \item Comandos de movimiento: $(v,\omega)$
         \item ¿Cuáles $(v,\omega)$ son admisibles y alcanzables?
-    \end{itemize}    
+    \end{itemize}
     
 \end{frame}
 
