--- a/teoricas/teorica_06/src/ekf.tex
+++ b/teoricas/teorica_06/src/ekf.tex
@@ -397,7 +397,6 @@
 \begin{frame}
     \frametitle{Jacobianos del modelo de movimiento}
     \note{información extraida de https://youtu.be/PiCC-SxWlH8}
-    \TODO{Por qué separamos el jacobiano en dos G y V?}
     
     Calculamos el Jacobiano con respecto al comando de control
     \begin{equation*}
@@ -414,7 +413,7 @@
         \begin{bmatrix}
             -\delta_{trans} \sin(\theta + \delta_{rot_{1}}) & \cos(\theta + \delta_{rot_{1}}) & 0\\
             \delta_{trans} \cos(\theta + \delta_{rot_{1}}) & \sin(\theta + \delta_{rot_{1}}) & 0\\
-            0 & 0 & 1\\
+            1 & 0 & 1\\
         \end{bmatrix}
     \end{equation*}
 \end{frame}
@@ -491,7 +490,7 @@
             \begin{bmatrix}
                 -\delta_{trans} \sin(\theta + \delta_{rot_{1}}) & \cos(\theta + \delta_{rot_{1}}) & 0\\
                 \delta_{trans} \cos(\theta + \delta_{rot_{1}}) & \sin(\theta + \delta_{rot_{1}}) & 0\\
-                0 & 0 & 1\\
+                1 & 0 & 1\\
             \end{bmatrix}
                 $
         \State $
@@ -651,16 +650,17 @@
         Cyrill Stachniss KF y EKF: https://youtu.be/E-6paM_Iwfc
         Chebrolu EKF Localization: https://youtu.be/PiCC-SxWlH8}
     
-    https://automaticaddison.com/extended-kalman-filter-ekf-with-python-code-example/
-    https://github.com/shangzhouye/EKF-SLAM-on-Turtlebot3
+    \footnotesize
+    \url{https://automaticaddison.com/extended-kalman-filter-ekf-with-python-code-example/}
+    \url{https://github.com/shangzhouye/EKF-SLAM-on-Turtlebot3}
     
-    https://github.com/ser94mor/sensor-fusion
+    \url{https://github.com/ser94mor/sensor-fusion}
     
-    https://github.com/AtsushiSakai/PythonRobotics
+    \url{https://github.com/AtsushiSakai/PythonRobotics}
     
     Puede ser que el tp sea en python no mas y el tp final hacerlo en ROS2.
     
-    https://github.com/debbynirwan/mcl
+    \url{https://github.com/debbynirwan/mcl}
     
     
 \end{frame}
