Slide 09: Add references

--- a/common/bibliography.bib
+++ b/common/bibliography.bib
@@ -299,7 +299,7 @@
 	ISBN={9780262255912}
 }
 
-% Robot Motion Planning
+% [Motion Planning] Robot Motion Planning
 @book{latombe1991robot,
     author = {Latombe, Jean-Claude},
     title = {\href{https://doi.org/10.1007/978-1-4615-4022-9}{Robot Motion Planning}},
@@ -309,6 +309,90 @@
     address = {USA},
     publisher = springer,
     doi={10.1007/978-1-4615-4022-9}
+}
+
+% [Motion Planning] Dynamic Window Approach
+@INPROCEEDINGS{simmons1996curvature,
+    author={Simmons, R.},
+    booktitle={Proceedings of IEEE International Conference on Robotics and Automation}, 
+    title={The curvature-velocity method for local obstacle avoidance}, 
+    year={1996},
+    volume={4},
+    number={},
+    pages={3375-3382},
+    doi={10.1109/ROBOT.1996.511023}
+}
+
+% [Motion Planning] Dynamic Window Approach
+@ARTICLE{fox1997dwa,
+    author={Fox, D. and Burgard, W. and Thrun, S.},
+    journal={IEEE Robotics & Automation Magazine}, 
+    title={The dynamic window approach to collision avoidance}, 
+    year={1997},
+    volume={4},
+    number={1},
+    pages={23--33},
+    doi={10.1109/100.580977}
+}
+
+% [Motion Planning] Dynamic Window Approach
+@INPROCEEDINGS{brock1999dwa,
+    author={Brock, O. and Khatib, O.},
+    booktitle={Proceedings 1999 IEEE International Conference on Robotics and Automation (Cat. No.99CH36288C)}, 
+    title={High-speed navigation using the global dynamic window approach}, 
+    year={1999},
+    volume={1},
+    number={},
+    pages={341--346},
+    doi={10.1109/ROBOT.1999.770002}
+}
+
+% [Motion Planning] Grid Map based planning
+@INPROCEEDINGS{konolige2000gradient,
+    author={Konolige, K.},
+    booktitle={Proceedings. 2000 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2000) (Cat. No.00CH37113)}, 
+    title={A gradient method for realtime robot control}, 
+    year={2000},
+    volume={1},
+    number={},
+    pages={639--646},
+    doi={10.1109/IROS.2000.894676}
+}
+
+% [Motion Planning] Nearness diagram (ND) navigation
+@INPROCEEDINGS{minguez2001global,
+    author={Minguez, J. and Montano, L. and Simeon, T. and Alami, R.},
+    booktitle={Proceedings 2001 ICRA. IEEE International Conference on Robotics and Automation (Cat. No.01CH37164)}, 
+    title={Global nearness diagram navigation (GND)}, 
+    year={2001},
+    volume={1},
+    number={},
+    pages={33--39},
+    doi={10.1109/ROBOT.2001.932526}
+}
+
+% [Motion Planning] Nearness diagram (ND) navigation
+@ARTICLE{minguez2004nearness,
+    author={Javier Minguez and Montano, L.},
+    journal={IEEE Transactions on Robotics and Automation}, 
+    title={Nearness diagram (ND) navigation: collision avoidance in troublesome scenarios}, 
+    year={2004},
+    volume={20},
+    number={1},
+    pages={45-59},
+    doi={10.1109/TRA.2003.820849}
+}
+
+% [Motion Planning] Vector-Field-Histogram+
+@INPROCEEDINGS{ulrich1998vfhplus,
+    author={Ulrich, I. and Borenstein, J.},
+    booktitle={Proceedings. 1998 IEEE International Conference on Robotics and Automation (Cat. No.98CH36146)}, 
+    title={VFH+: reliable obstacle avoidance for fast mobile robots}, 
+    year={1998},
+    volume={2},
+    number={},
+    pages={1572--1577},
+    doi={10.1109/ROBOT.1998.677362}
 }
 
 
