Slide 09: fix compilation

--- a/teoricas/teorica_09/src/motion_planning.tex
+++ b/teoricas/teorica_09/src/motion_planning.tex
@@ -34,13 +34,14 @@
     
     \begin{itemize}
         \item ¿Cómo reaccionar a objetos imprevistos (dinámicos)?
-        \begin{itemizes}
-            \item Eficiencia: Tiene que ser eficiente al lidiar con objetos imprevistos imprevistos (dinámicos). Tiene que ser capaz de hacer (\empph{Re-planning}). Ej: Una puerta cerrada o un objeto dinámico.
+        \begin{itemize}
+            \item Eficiencia: Tiene que ser eficiente al lidiar con objetos imprevistos imprevistos (dinámicos). Tiene que ser capaz de hacer (\emph{Re-planning}). Ej: Una puerta cerrada o un objeto dinámico.
             \item Fiable (\emph{reliability}):
-        \end{itemizes}
+        \end{itemize}
         
         \begin{itemize}
             \item Dynamic Window Approaches
+            [Simmons, 96], [Fox et al., 97], [Brock and Khatib, 99]
             \item Grid map based planning
             \item Nearness Diagram Navigation
             \item Vector-Field-Histogram+
@@ -57,7 +58,7 @@
 	
 	\begin{itemize}
 		\item Calcular el camino óptimo considerando potenciales incertidumbres en las acciones
-		\item Generar rápidamente acciones en el caso de objetos imprevistos (\empph{Re-planning}). Ej: Una puerta cerrada o un objeto dinámico.
+		\item Generar rápidamente acciones en el caso de objetos imprevistos (\emph{Re-planning}). Ej: Una puerta cerrada o un objeto dinámico.
 	\end{itemize}
 	
 \end{frame}
