Slide 09: add references

--- a/teoricas/teorica_09/src/motion_planning.tex
+++ b/teoricas/teorica_09/src/motion_planning.tex
@@ -36,16 +36,27 @@
         \item ¿Cómo reaccionar a objetos imprevistos (dinámicos)?
         \begin{itemize}
             \item Eficiencia: Tiene que ser eficiente al lidiar con objetos imprevistos imprevistos (dinámicos). Tiene que ser capaz de hacer (\emph{Re-planning}). Ej: Una puerta cerrada o un objeto dinámico.
-            \item Fiable (\emph{reliability}):
+            \item Fiable (\emph{reliability}): tiene que ser fiable y no colisionar con un obstáculo.
         \end{itemize}
         
         \begin{itemize}
             \item Dynamic Window Approaches
-            [Simmons, 96], [Fox et al., 97], [Brock and Khatib, 99]
+            
+            {\scriptsize [Simmons, 96], [Fox et al., 97], [Brock \& Khatib, 99]}
             \item Grid map based planning
+            
+            {\scriptsize [Konolige, 00]}
+            
             \item Nearness Diagram Navigation
+            
+            {\scriptsize [Minguez et al., 2001, 2002]}
+            
             \item Vector-Field-Histogram+
-            \item A$^{*}$, D$^{*}$, D$^{*} Lite$, ARA$^{*}$
+            
+            {\scriptsize Ulrich \& Borenstein, 98}
+            
+            \item A$^{*}$, D$^{*}$, D$^{*}$ Lite, ARA$^{*}$
+            
         \end{itemize}
         
     \end{itemize}
